tdf#88169: Do not return ..._INFO_SRCBUFFERTOSMALL when ..._FLAGS_FLUSH

...in accordance with
<http://www.openoffice.org/udk/cpp/man/spec/textconversion.html>

Change-Id: I62013f89c421722770123db8a5794e63d3572e6b